part1/exercise11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong
            port:
              number: 2344
      - path: /logoutput
        pathType: Prefix
        backend:
          service:
            name: log-output
            port:
              number: 2345
